<resources>
    <string name="app_name">DRAWFT</string>
    <string name="hello_world">Hello Group Drawft</string>
    <string name="contentDescription">contentDescription</string>
    <string name="country">Country</string>
    <string name="code">Code</string>
    <string name="num">YOUR NUMBER</string>
    <string name="call_num_1">GIVE US A CALL</string>
    <string name="call_num_2">- TOLL FREE -</string>
    <string name="call_num_3">TO VERIFY YOUR NUMBER</string>
    <string name="call_info">Call will\nautomatically\ndisconnect\nafter 1-2 rings</string>
    <string name="verify_terms">Terms and Conditions</string>
    <string name="icon_dail"></string>
    <string name="icon_phone"></string>
    <string name="icon_drop"></string>
    <string name="icon_user">Members</string>
    <string name="icon_add">Non Members</string>
    <string name="action_settings">Menu</string>
    <string name="description">Image</string>
    <string name="icon_image"></string>
    <string name="icon_search"></string>
    <string name="icon_new_group"></string>
    <string name="search_input_hint">Search</string>
    <string name="title_activity_new_group">New Group Activity</string>
    <string name="title_activity_communication_list">CommunicationList</string>
    <string name="group_name_hint">Enter Group Name</string>
    <string name="groups_list_empty">Add [  ] Group</string>
    <string name="icon_refresh"></string>
    <string name="refresh_contacts">Refresh Contacts</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="app_status">App is up to date</string>
    <string name="terms_conditions">Terms</string>
    <string name="navigation_drawer_open">Navigation open</string>
    <string name="navigation_drawer_close">Navigation closed</string>
    <string name="gcm_message">sent you a Drawft</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="error_gcm_registered">Error while registering. Try again!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="no_internet">No\nInternet\nConnection</string>
    <string name="retry">Retry</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="logo"></string>
    <string name="share_title">Share with</string>
    <string name="blockedText">You have blocked this chat. Unblock to send drawfts </string>
    <string name="noteVerify1">You will receive a missed call on </string>
    <string name="noteVerify2">.\n \n You need not answer the call.</string>
    <string name="termsText">By using Drawft you agree to these </string>
    <string name="numberVerify">VERIFY</string>
    <string name="icon_send_drawft">&#xe096;</string>
    <string name="icon_undo_drawft">&#xe039;</string>
    <string name="icon_lock_pad">&#xe007;</string>
    <string name="icon_unlock_pad">&#xe008;</string>
    <string name="icon_fa_circle_o">&#xe049;</string>
    <string name="icon_fa_circle">&#xe087;</string>
    <string name="icon_save">&#xe116;</string>
    <string name="icon_remove_member">&#xe115;</string>
    <string name="icon_add_member">&#xe114;</string>
    <string name="icon_settings"></string>
    <string name="icon_tile_user">&#xe074;</string>
    <string name="icon_tile_notification">&#xe087;</string>
    <string name="icon_heart">&#xe024;</string>
    <string name="icon_trash">&#xe109;</string>
    <string name="editGroupName">&#xe129;</string>
    <string name="icon_cancel">&#xe117;</string>
    <string name="icon_block">&#xe107;</string>
    <string name="icon_bell">&#xe006;</string>
    <string name="arrow_right">&#xe095;</string>
    <string name="arrow_left">&#xe094;</string>
    <string name="clear_drawfts">&#xe105;</string>
    <string name="load_previous_drawfts">&#xe097;</string>
    <string name="new_drawfts_icon">&#xe015;</string>
    <string name="icon_slider">&#xe120;</string>
    <string name="double_arrow">&#xe055;</string>
    <string name="refresh_icon">&#xe058;</string>
    <string name="create_group_icon">&#xe114;</string>
    <string name="terms_icon">&#xe034;</string>
    <string name="search_icon">&#xe036;</string>
    <string name="new_version_icon">&#xe122;</string>
</resources>