<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/yellow_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/contentDescription"
             />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/countryName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:singleLine="true"
                android:text="@string/country"
                android:textColor="@color/hint_color"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/country_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:text="@string/icon_drop"
                android:textColor="@color/font_color"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/country_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:hint="@string/code"
                android:inputType="phone"
                android:maxLength="6"
                android:minWidth="20dp"
                android:textColor="@color/number_color"
                android:textSize="20sp"
                android:textStyle="bold">

            </EditText>

            <TextView
                android:id="@+id/phone_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/icon_phone"
                android:textColor="@color/font_color"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/phoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/num"
                android:textColor="@color/hint_color"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/contactNumEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:hint="@string/num"
                android:inputType="phone"
                android:maxLength="14"
                android:minWidth="30dp"
                android:singleLine="true"
                android:textColor="@color/number_color"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="gone">

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/callNum"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/callNum1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingTop="18dp"
                android:text="@string/call_num_1"
                android:textColor="@color/font_color"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/callNum2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/call_num_2"
                android:textColor="@color/font_color"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/callNum3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/call_num_3"
                android:textColor="@color/font_color"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/main_wait"
            style="?android:attr/progressBarStyleInverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/callInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|top"
                android:padding="8dp"
                android:text="@string/call_info"
                android:textColor="@color/font_color"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <Button
                android:id="@+id/dial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center_horizontal"
                android:paddingBottom="10dp"
                android:text="@string/icon_dail"
                android:textColor="#FFFFFF"
                android:textSize="47sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/terms"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|bottom"
            android:paddingBottom="10dp"
            android:text="@string/verify_terms"
            android:textColor="#e12345"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
