<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/pad_background"
    android:id="@+id/drawing_pad_wrapper"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:paddingBottom="40dp"
        android:paddingTop="40dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:theme="@android:style/Theme.Translucent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@null"
            android:stackFromBottom="true"
            android:dividerHeight="0dp" />

    </LinearLayout>

    <RelativeLayout
        android:paddingBottom="40dp"
        android:paddingTop="50dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:theme="@android:style/Theme.Translucent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/blockedText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@color/icon_color"
            android:layout_centerInParent="true"
            android:visibility="gone"
            android:padding="10dp"
            android:gravity="center" />

        <TextView
            android:id="@+id/block"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/blockedText"
            android:layout_centerInParent="true"
            android:clickable="true"
            android:gravity="center"
            android:paddingTop="10dp"
            android:text="@string/icon_block"
            android:textColor="@color/paint_color_red"
            android:textSize="35sp"
            android:visibility="gone" />

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/drawing_pad"
        android:paddingLeft="0.0px"
        android:paddingTop="0.0px"
        android:paddingRight="0.0px"
        android:paddingBottom="0.0dip"
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:background="@color/drawing_pad_transparent"
        android:theme="@android:style/Theme.Translucent"
        android:layout_height="match_parent"
         />

    <Button
        android:id="@+id/icon_send_drawft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:paddingLeft="20dp"
        android:visibility="gone"
        android:paddingBottom="8dp"
        android:alpha="0.7"
        android:background="@android:color/transparent"
        android:text="@string/icon_send_drawft"
        android:textColor="@color/icon_color"
        android:textSize="50sp" />

    <LinearLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_weight="1.0">

        <Button
            android:id="@+id/icon_lock_pad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/icon_unlock_pad"
            android:textColor="@color/icon_color"
            android:textSize="28sp" />

        <Button
            android:id="@+id/colorButton1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="@android:color/transparent"
            android:text="@string/icon_fa_circle_o"
            android:textColor="@color/paint_color_red"
            android:textSize="20sp" />

        <Button
            android:id="@+id/colorButton2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="@android:color/transparent"
            android:text="@string/icon_fa_circle_o"
            android:textSize="20sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:visibility="invisible" />
        <Button
            android:id="@+id/colorButton3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="@android:color/transparent"
            android:text="@string/icon_fa_circle_o"
            android:textSize="20sp" />

        <Button
            android:id="@+id/colorButton4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="@android:color/transparent"
            android:text="@string/icon_fa_circle_o"
            android:textSize="20sp" />

        <Button
            android:id="@+id/icon_undo_drawft"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="@android:color/transparent"
            android:text="@string/icon_undo_drawft"
            android:textSize="28sp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/bottom_bar_list"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/icon_unlock_pad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@android:color/transparent"
            android:text="@string/icon_lock_pad"
            android:textColor="@color/icon_color"
            android:textSize="28sp" />
    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/drawing_pad_top_bar"
        >

        <TextView
            android:id="@+id/drawingPadUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:text="@string/arrow_left"
            android:textColor="@color/icon_color"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/groupName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/app_name"
            android:padding="3dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:gravity="center"
            android:layout_toLeftOf="@+id/padTopBarProfileIcon"
            android:layout_toStartOf="@+id/padTopBarProfileIcon"
            android:layout_toRightOf="@id/drawingPadUp"
            android:layout_toEndOf="@id/drawingPadUp"
            android:textColor="@color/icon_color"
            android:textSize="20sp" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/padTopBarProfileIcon"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/arrow_right"
            android:textColor="@color/icon_color"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:textSize="28sp" />


    </RelativeLayout>
    <TextView
        android:id="@+id/lastSeen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="12sp"
        android:visibility="gone"
        android:textColor="@color/icon_color"
        android:layout_marginTop="26dp"/>

</RelativeLayout>